// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDropdown should render shallow component ok 1`] = `
<button
  className="ui-btn ui-btn--medium ui-btn--tertiary e1krcyn16 css-0"
  data-test="ui-button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  role="button"
  style={Object {}}
  type={undefined}
>
  <div
    className="ui-btn__react-placeholder-message"
  >
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor e1krcyn16 css-1brs5yl"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
  </div>
  <div
    className="ui-btn__react-visible-message"
    name="message"
    title={undefined}
  >
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor e1krcyn16 css-1brs5yl"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
    <div
      className="root"
    >
      <div
        style={
          Object {
            "display": "none",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-btn__react-success-message"
  />
</button>
`;

exports[`ButtonDropdown should render with a checkbox 1`] = `
<button
  className="ui-btn ui-btn--medium ui-btn--tertiary e1krcyn16 css-0"
  data-test="ui-button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  role="button"
  style={Object {}}
  type={undefined}
>
  <div
    className="ui-btn__react-placeholder-message"
  >
    <div
      className="ui-checkbox ui-checkbox--large e1krcyn10 css-2l1w6y"
      data-test="ui-checkbox"
      name={undefined}
      style={Object {}}
    >
      <input
        checked={false}
        disabled={false}
        id="checkbox1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox1"
        onClick={[Function]}
      />
    </div>
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor e1krcyn16 css-1brs5yl"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
  </div>
  <div
    className="ui-btn__react-visible-message"
    name="message"
    title={undefined}
  >
    <div
      className="ui-checkbox ui-checkbox--large e1krcyn10 css-2l1w6y"
      data-test="ui-checkbox"
      name={undefined}
      style={Object {}}
    >
      <input
        checked={false}
        disabled={false}
        id="checkbox2"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox2"
        onClick={[Function]}
      />
    </div>
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor e1krcyn16 css-1brs5yl"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
    <div
      className="root"
    >
      <div
        style={
          Object {
            "display": "none",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-btn__react-success-message"
  />
</button>
`;
